EOD Commit: Fix navbar jumping to jump before title and start making cards for the projects

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,13 +11,19 @@
     .body, #app {
         @apply font-terminal;
     }
+    h1 {
+        @apply my-3 text-3xl sm:text-4xl md:text-5xl text-center font-bold p-5 bg-black text-white w-fit m-auto shadow-xl scroll-mt-20;
+    }
     h2 {
-        @apply text-2xl sm:text-3xl md:text-4xl font-semibold font-terminal;
+        @apply text-2xl sm:text-3xl md:text-4xl font-semibold;
     }
     h3 {
         @apply text-xl sm:text-2xl md:text-3xl;
     }
     p, li {
         @apply text-base sm:text-lg md:text-xl;
+    }
+    hr {
+        @apply m-5 border-none h-px bg-black;
     }
 }
